@@ -5,7 +5,7 @@ function(x)
   x$pct[is.na(x$pct)] <- 1
   
   # skip horizons with a single color
-  tab <- table(x$hz_id)
+  tab <- table(x$phiid)
   if(tab > 1) {
     r <- with(x, wtd.mean(r, weights=pct))
     g <- with(x, wtd.mean(g, weights=pct))
